--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,9 +63,9 @@ jobs:
         run: |
           JULIA_VERSION=$(julia -e 'print(stdout, VERSION)')
           JULIA_VERSION_SPLIT=(${JULIA_VERSION//./ })
-          export PKR_VAR_julia_version_major=${JULIA_VERSION_SPLIT[0]}
-          export PKR_VAR_julia_version_minor=${JULIA_VERSION_SPLIT[1]}
-          export PKR_VAR_julia_version_patch=${JULIA_VERSION_SPLIT[2]}
+          export JULIA_VERSION_MAJOR=${JULIA_VERSION_SPLIT[0]}
+          export JULIA_VERSION_MINOR=${JULIA_VERSION_SPLIT[1]}
+          export JULIA_VERSION_PATCH=${JULIA_VERSION_SPLIT[2]}
           packer init ${GITHUB_WORKSPACE}/test/templates/cofii-base.pkr.hcl
           packer build -color=false -timestamp-ui \
             -var "subscription_id=${SUBSCRIPTION_ID}" \
