--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
             -var "gallery=${GALLERY_NAME}" \
             -var "julia_version_major=${JULIA_VERSION_MAJOR}" \
             -var "julia_version_minor=${JULIA_VERSION_MINOR}" \
-            -var "julia_version_patch=${JULIA_VERSION_PATCH} \
+            -var "julia_version_patch=${JULIA_VERSION_PATCH}" \
             ${GITHUB_WORKSPACE}/test/templates/cofii-base.pkr.hcl[ppacpack]
 
       # - name: Create Master VM
