--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,8 @@ jobs:
           echo "github.ref_name" ${{ github.ref_name }}
           echo "github.ref_type" ${{ github.ref_type }}
           echo "github.sha" ${{ github.sha }}
+          echo "git log"
+          git log
 
       # - name: Create Prereq. Azure Resources
       #   run: |
