--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           echo "github.ref_type" ${{ github.ref_type }}
           echo "github.sha" ${{ github.sha }}
           echo "git log"
-          git log --pretty '%T %H'
+          git log --pretty=format'%T %H'
 
       # - name: Create Prereq. Azure Resources
       #   run: |
