--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,31 +92,31 @@ jobs:
             -var "azmanagers_version=${{ github.sha }}" \
             ${GITHUB_WORKSPACE}/test/image.pkr.hcl
 
-      # - name: Create coordinator VM
-      #   run: |
-      #     az vm create -g "$RESOURCE_GROUP" -n "$VM_NAME" --image "$IMAGE_NAME" --public-ip-sku Standard --public-ip-address "$PUBLIC_IP_NAME" --subnet "$SUBNET_NAME" --vnet-name "$VNET_NAME" --nsg "$NSG_NAME" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub --admin-username cvx
+      - name: Create coordinator VM
+        run: |
+          az vm create -g "$RESOURCE_GROUP" -n "$VM_NAME" --image "$IMAGE_NAME" --public-ip-sku Standard --public-ip-address "$PUBLIC_IP_NAME" --subnet "$SUBNET_NAME" --vnet-name "$VNET_NAME" --nsg "$NSG_NAME" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub --admin-username cvx
 
-      # - name: Run the unit tests
-      #   run: |
-      #     echo "Grabbing the coordinator VM's Pubic IP Address..."
-      #     ipaddress=$(az network public-ip show -g "$RESOURCE_GROUP" -n "$PUBLIC_IP_NAME" | jq '.ipAddress' | cut -d "\"" -f 2)
-      #     echo ""
+      - name: Run the unit tests
+        run: |
+          echo "Grabbing the coordinator VM's Pubic IP Address..."
+          ipaddress=$(az network public-ip show -g "$RESOURCE_GROUP" -n "$PUBLIC_IP_NAME" | jq '.ipAddress' | cut -d "\"" -f 2)
+          echo ""
 
-      #     echo "Running the Unit Tests and Code Coverage..."
-      #     ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; Pkg.test(\"AzManagers\"; coverage=true); using AzManagers; include(joinpath(pkgdir(AzManagers), \"test\", \"julia-codecov.jl\"))'"
-      #     echo ""
+          echo "Running the Unit Tests and Code Coverage..."
+          ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; Pkg.test(\"AzManagers\"; coverage=true); using AzManagers; include(joinpath(pkgdir(AzManagers), \"test\", \"julia-codecov.jl\"))'"
+          echo ""
 
-      #     echo "scp-ing the Coverage Report..."
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/lcov.info lcov.info
+          echo "scp-ing the Coverage Report..."
+          scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/lcov.info lcov.info
 
-      # - uses: codecov/codecov-action@v1
-      #   with:
-      #     file: lcov.info
+      - uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
 
-      # - name: Delete CI Resource Group
-      #   run: |
-      #     az group delete -n "$RESOURCE_GROUP" --yes
-      #   if: ${{ always() }}
+      - name: Delete CI Resource Group
+        run: |
+          az group delete -n "$RESOURCE_GROUP" --yes
+        if: ${{ always() }}
   # docs:
   #   name: Documentation
   #   runs-on: ubuntu-latest
