--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSONWebTokens = "9b8beb19-0777-58c6-920b-28f749fee4d3"
+LibCURL = "b27032c2-a3e7-50c8-80cd-2d36dbcbfd21"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
@@ -29,6 +30,7 @@ CodecZlib = "0.7"
 HTTP = "1"
 JSON = "0.21"
 JSONWebTokens = "1"
+LibCURL = "0.6"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 TOML = "1"
 julia = "^1.4"
