--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,6 @@ JSONWebTokens = "9b8beb19-0777-58c6-920b-28f749fee4d3"
 LibCURL = "b27032c2-a3e7-50c8-80cd-2d36dbcbfd21"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
-MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -23,6 +22,15 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+[weakdeps]
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+
+[extras]
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+
+[extensions]
+MPIExt = "MPI"
 
 [compat]
 AzSessions = "2"
@@ -34,9 +42,3 @@ LibCURL = "0.6"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 TOML = "1"
 julia = "^1.4"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
