--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ MPIExt = "MPI"
 AzSessions = "2"
 CodecZlib = "0.7"
 HTTP = "1"
-JSON = "0.21"
+JSON = "0.21, 1"
 JSONWebTokens = "1"
 LibCURL = "0.6"
 MPI = "0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
