--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - 1.6
-          - 1
+          - lts
+          - 1 # automatically expands to the latest stable 1.x release of Julia
         os:
           - ubuntu-latest
         arch:
